--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -25,7 +25,13 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#readings">Readings</a></li>
 <li><a href="#schedule">Schedule</a></li>
 <li><a href="#class-sessions">Class Sessions</a><ul>
-<li><a href="#html">HTML</a></li>
+<li><a href="#html">HTML</a><ul>
+<li><a href="#how-the-web-works">How the web works</a></li>
+<li><a href="#html-document-text">HTML Document &amp; Text</a></li>
+<li><a href="#your-own-webserver">Your own webserver</a></li>
+<li><a href="#links-images">Links &amp; Images</a></li>
+<li><a href="#lists-tables">Lists &amp; Tables</a></li>
+</ul></li>
 <li><a href="#more-html-css">More HTMl &amp; CSS</a></li>
 <li><a href="#usability-accessiblity">Usability &amp; accessiblity</a></li>
 <li><a href="#dynamic-websites">Dynamic websites</a></li>
@@ -35,6 +41,9 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#final-projects">Final projects</a></li>
 </ul></li>
 <li><a href="#assignments">Assignments</a></li>
+<li><a href="#resources">Resources</a><ul>
+<li><a href="#required">Required</a></li>
+</ul></li>
 </ul>
 </nav>
 
@@ -147,13 +156,27 @@ http://education.adelphi.edu/ed-tech
          <h2><a href="#TOC">Class Sessions</a></h2>
          <div class="section level3" id="html">
          <h3><a href="#TOC">HTML</a></h3>
-         <ol style="list-style-type: decimal">
-         <li>How the web works</li>
-         <li>HTML Document &amp; Text</li>
-         <li>Your own webserver</li>
-         <li>Links &amp; Images</li>
-         <li>Lists &amp; Tables</li>
-         </ol>
+         <div class="section level4" id="how-the-web-works">
+         <h4><a href="#TOC">How the web works</a></h4>
+         <p><strong>Read/Watch</strong></p>
+         <ul>
+         <li><a href="http://public.web.cern.ch/public/en/about/webwork-en.html">CERN: How the Web Works</a></li>
+         <li>Duckett, Introduction &amp; Chapter 1</li>
+         </ul>
+         <p><strong>Do:</strong> - create a basic website on your own computer (Hello World) - add <em>at least</em> 2 entries to the <a href="http://aws.curinga.com/wiki/Web_Programming_Lexicon">Programming Lexicon</a></p>
+         </div>
+         <div class="section level4" id="html-document-text">
+         <h4><a href="#TOC">HTML Document &amp; Text</a></h4>
+         </div>
+         <div class="section level4" id="your-own-webserver">
+         <h4><a href="#TOC">Your own webserver</a></h4>
+         </div>
+         <div class="section level4" id="links-images">
+         <h4><a href="#TOC">Links &amp; Images</a></h4>
+         </div>
+         <div class="section level4" id="lists-tables">
+         <h4><a href="#TOC">Lists &amp; Tables</a></h4>
+         </div>
          </div>
          <div class="section level3" id="more-html-css">
          <h3><a href="#TOC">More HTMl &amp; CSS</a></h3>
@@ -218,6 +241,19 @@ http://education.adelphi.edu/ed-tech
          <li><p><strong>Single Page Website (40%):</strong> students will build a single-page, informational website on a topic of their choice. Their website will be composed of HTML5, CSS, and Javascript. It will display their fluency with the components of HTML, styling with CSS, and enhancing user experience with Javascript. The content of the website is entirely up to the student. They are encouraged to create a website on something they are already familiar with and interested in. This is an individual project.</p></li>
          <li><p><strong>Final project (60%):</strong> student teams will propose, design, and execute their own project. The requirements for the project are that it demonstrates effective use of the web for supporting learning, as well as the student's understanding of software analysis and design. The instructor will work with teams to develop suitable projects. In addition to submitting the working code, students will turn in a one page paper reflecting on the pedagogy informing their design.</p></li>
          </ol>
+         </div>
+         <div class="section level2" id="resources">
+         <h2><a href="#TOC">Resources</a></h2>
+         <div class="section level3" id="required">
+         <h3><a href="#TOC">Required</a></h3>
+         <ul>
+         <li><a href="http://git-scm.com/">git version control</a></li>
+         <li>a text editor</li>
+         <li>an ssh client (Mac Users can use Terminal)</li>
+         <li><a href="http://www.mozilla.org/en-US/">Firefox web browser</a></li>
+         <li>an FTP/SCP client</li>
+         </ul>
+         </div>
          </div></article>
 
 <footer>
@@ -237,6 +273,7 @@ http://education.adelphi.edu/ed-tech
 <p><strong>Programming web-based educational media</strong> was created by:</p>
     <ul>
             <li><a xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="cc:attributionURL">Matthew X. Curinga</a></li>
+                <li><a xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName" rel="cc:attributionURL">Antonios Saravanos</a></li>
             </ul>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
     <p>
@@ -244,7 +281,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 14. January 2013 01:49PM</tt></p>
+<p><tt>Last modified: Wednesday, 23. January 2013 10:59AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
