--- a/raw/research-seminar.html
+++ b/raw/research-seminar.html
@@ -21,6 +21,7 @@ http://education.adelphi.edu/ed-tech
 <ul>
 <li><a href="#spring-2013-seminar-girls-programming">Spring 2013 Seminar: Girls &amp; Programming</a></li>
 <li><a href="#goals">Goals</a></li>
+<li><a href="#online-resources">Online Resources</a></li>
 <li><a href="#required-texts">Required texts</a></li>
 <li><a href="#bibliography-readings">Bibliography &amp; readings</a></li>
 <li><a href="#class-sessions">Class Sessions</a><ul>
@@ -38,6 +39,8 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#action-research-design-research">Action Research &amp; Design Research</a></li>
 <li><a href="#case-studies-ethnogrpahy">Case Studies &amp; Ethnogrpahy</a></li>
 <li><a href="#research-ethics">Research ethics</a></li>
+<li><a href="#research-design-workshop-1">Research Design Workshop 1</a></li>
+<li><a href="#research-design-workshop-2">Research Design Workshop 2</a></li>
 <li><a href="#data-and-continuous-improvement">Data and continuous improvement</a></li>
 <li><a href="#final-presentations">Final presentations</a></li>
 </ul></li>
@@ -94,6 +97,15 @@ http://education.adelphi.edu/ed-tech
          <li>design measures to evaluate the success of technology initiatives</li>
          </ul>
          </div>
+         <div class="section level2" id="online-resources">
+         <h2><a href="#TOC">Online Resources</a></h2>
+         <ul>
+         <li>Course Wiki <a href="http://aws.curinga.com/wiki"><code class="url">http://aws.curinga.com/wiki</code></a></li>
+         <li>Zotero Group: Girls, Women &amp; Computer Science <a href="https://www.zotero.org/groups/girls_women__computer_science"><code class="url">https://www.zotero.org/groups/girls_women__computer_science</code></a></li>
+         <li>Google Scholar <a href="http://scholar.google.com"><code class="url">http://scholar.google.com</code></a></li>
+         <li>Adelphi Libraries <a href="http://libraries.adelphi.edu"><code class="url">http://libraries.adelphi.edu</code></a></li>
+         </ul>
+         </div>
          <div class="section level2" id="required-texts">
          <h2><a href="#TOC">Required texts</a></h2>
          <p><em>None</em></p>
@@ -142,7 +154,6 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level3" id="participants-and-subjects">
          <h3><a href="#TOC">Participants and subjects</a></h3>
-         <p><em>Readings due: McMillan, ch 5; “Public Interest and the Interests of White People Are Not the Same: Assessment, Education Policy and Racism”, David Gillborn in Ladson-Billings</em></p>
          </div>
          <div class="section level3" id="survey-based-research">
          <h3><a href="#TOC">Survey-based research</a></h3>
@@ -161,8 +172,12 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level3" id="research-ethics">
          <h3><a href="#TOC">Research ethics</a></h3>
-         <p><em>Readings due: “Interrupting the Right: On Doing Critical Educational Work in Conservative Times”, Michael Apple in Ladson-Billings</em></p>
-         <p><em>Readings due: McMillan, ch 9</em></p>
+         </div>
+         <div class="section level3" id="research-design-workshop-1">
+         <h3><a href="#TOC">Research Design Workshop 1</a></h3>
+         </div>
+         <div class="section level3" id="research-design-workshop-2">
+         <h3><a href="#TOC">Research Design Workshop 2</a></h3>
          </div>
          <div class="section level3" id="data-and-continuous-improvement">
          <h3><a href="#TOC">Data and continuous improvement</a></h3>
@@ -183,7 +198,7 @@ http://education.adelphi.edu/ed-tech
          <li>educational equity and technology</li>
          </ul>
          <p>Through this assignment, students will be evaluated on their ability to understand, analyze, and synthesize research from a range of sources using a variety of research methodologies.</p>
-         <p><strong>Assignment 2 — Research design</strong> <strong>(60%)</strong></p>
+         <p><strong>Assignment 2 — Research design &amp; Pilot</strong> <strong>(60%)</strong></p>
          <p>For the final assignment, each student will develop a novel research study to explore an area of educational technology. Students will be encouraged to develop research that they can implement in their current work positions or in their upcoming fieldwork. The research design will be evaluated on:</p>
          <ul>
          <li>the importance of the research question</li>
@@ -217,19 +232,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Wednesday, 23. January 2013 10:59AM</tt></p>
+<p><tt>Last modified: Wednesday, 23. January 2013 12:24PM</tt></p>
 
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-    piwikTracker.trackPageView();
-    piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
 
 </footer>
