changes to web programming and research

--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -19,36 +19,43 @@ http://education.adelphi.edu/ed-tech
 <nav id="TOC">
 <h3>Course Outline</h3>
 <ul>
+<li><a href="#instructors-office-hours">Instructors &amp; Office Hours</a></li>
+<li><a href="#course-format">Course Format</a></li>
 <li><a href="#goals-and-objectives">Goals and Objectives</a></li>
 <li><a href="#required-books">Required Books</a></li>
 <li><a href="#optional-books">Optional Books</a></li>
 <li><a href="#readings">Readings</a></li>
 <li><a href="#schedule">Schedule</a></li>
-<li><a href="#class-sessions">Class Sessions</a><ul>
-<li><a href="#html">HTML</a><ul>
-<li><a href="#how-the-web-works">How the web works</a></li>
-<li><a href="#html-document-text">HTML Document &amp; Text</a></li>
-<li><a href="#your-own-webserver">Your own webserver</a></li>
-<li><a href="#links-images">Links &amp; Images</a></li>
-<li><a href="#lists-tables">Lists &amp; Tables</a></li>
-</ul></li>
-<li><a href="#more-html-css">More HTMl &amp; CSS</a></li>
-<li><a href="#usability-accessiblity">Usability &amp; accessiblity</a></li>
-<li><a href="#dynamic-websites">Dynamic websites</a></li>
-<li><a href="#object-oriented-programming">Object Oriented Programming</a></li>
-<li><a href="#object-composition-mixins-inheritance">Object composition, &quot;mixins&quot;, &amp; inheritance</a></li>
-<li><a href="#users-authentication">Users &amp; authentication</a></li>
-<li><a href="#final-projects">Final projects</a></li>
-</ul></li>
-<li><a href="#assignments">Assignments</a></li>
-<li><a href="#resources">Resources</a><ul>
-<li><a href="#required">Required</a></li>
+<li><a href="#class-sessions">Class Sessions</a></li>
+<li><a href="#assignments-grading">Assignments &amp; Grading</a><ul>
+<li><a href="#participation">Participation</a></li>
+<li><a href="#improvement">Improvement</a></li>
+<li><a href="#single-page-website">Single Page Website</a></li>
+<li><a href="#dynamic-web-application.">Dynamic web application.</a></li>
 </ul></li>
 </ul>
 </nav>
 
 
-<article><p><strong>Description:</strong> In this course students learn techniques of web programming to develop interactive, educational media. Using the Python programming language and web development technologies (HTML5, Javascript, CSS), students gain practice in the object oriented programming and design of interactive software. For their final project, students will create their own educational website.</p>
+<article><p><strong>EDT 603 <em>Programming web-based educational media</em>, Spring 2013</strong></p>
+         <p><strong>Description:</strong> In this course students learn techniques of web programming to develop interactive, educational media. Using the Python programming language and web development technologies (HTML5, Javascript, CSS), students gain practice in the object oriented programming and design of interactive software. For their final project, students will create their own educational website.</p>
+         <div class="section level2" id="instructors-office-hours">
+         <h2><a href="#TOC">Instructors &amp; Office Hours</a></h2>
+         <p>Matt Curinga, Post Annex Conference Room : mcuringa@adelphi.edu : Tuesday 3:00pm - 5:00pm : Wednesday 2:30pm - 4:30pm : <em>and by appointment</em></p>
+         <p>Antonios Saravanos, online via Google Hangout : saravanos@gmail.com : Monday 8:30pm - 10:30pm : Thursday 8:30pm - 10:30pm : <em>and by appointment</em></p>
+         </div>
+         <div class="section level2" id="course-format">
+         <h2><a href="#TOC">Course Format</a></h2>
+         <p>This course is fully online. Each week there will be a series of topics, for students to pursue at their own pace.</p>
+         <p>Instruction will come from several sources:</p>
+         <ul>
+         <li>the course text book (Duckett)</li>
+         <li>web resources, especially Code Academy</li>
+         <li>instructor videos</li>
+         </ul>
+         <p>There will be instructor led labs during office hours every week, both online via Google Hangout and in-person on the Garden City campus.</p>
+         <p>Students <em>must</em> attend at least 4 lab sessions. Assignments will be posted to this wiki and other communications will be sent via the Google Group Email List -- <a href="https://groups.google.com/forum/?fromgroups#!forum/au-web-programming">Adelphi Web Programming</a></p>
+         </div>
          <div class="section level2" id="goals-and-objectives">
          <h2><a href="#TOC">Goals and Objectives</a></h2>
          <p>This course builds on CSC 602 to move beyond basic programming concepts; students will gain expertise in building more complex computer programs, over many iterations. At the end of the course, students will be able to design educationally sound web-based learning media, solve moderately complex problems using OOP, collaborate on programming projects, and identify methods for teaching programming and web development.</p>
@@ -154,105 +161,36 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level2" id="class-sessions">
          <h2><a href="#TOC">Class Sessions</a></h2>
-         <div class="section level3" id="html">
-         <h3><a href="#TOC">HTML</a></h3>
-         <div class="section level4" id="how-the-web-works">
-         <h4><a href="#TOC">How the web works</a></h4>
-         <p><strong>Read/Watch</strong></p>
          <ul>
-         <li><a href="http://public.web.cern.ch/public/en/about/webwork-en.html">CERN: How the Web Works</a></li>
-         <li>Duckett, Introduction &amp; Chapter 1</li>
+         <li>Week 1: HTML &amp; Web Basics</li>
+         <li>Week 2: More HTMl &amp; CSS</li>
+         <li>Week 3: Usability &amp; accessiblity</li>
+         <li>Week 4: Dynamic websites</li>
+         <li>Week 5: Object Oriented Programming</li>
+         <li>Week 6: Object composition, &quot;mixins&quot;, &amp; inheritance</li>
+         <li>Week 7: Users &amp; authentication</li>
+         <li>Week 8: Final project showcase</li>
          </ul>
-         <p><strong>Do:</strong> - create a basic website on your own computer (Hello World) - add <em>at least</em> 2 entries to the <a href="http://aws.curinga.com/wiki/Web_Programming_Lexicon">Programming Lexicon</a></p>
          </div>
-         <div class="section level4" id="html-document-text">
-         <h4><a href="#TOC">HTML Document &amp; Text</a></h4>
+         <div class="section level2" id="assignments-grading">
+         <h2><a href="#TOC">Assignments &amp; Grading</a></h2>
+         <p>There are two major projects in this course, the <em>single page website</em> and the <em>dynamic web application</em>.</p>
+         <div class="section level3" id="participation">
+         <h3><a href="#TOC">Participation</a></h3>
+         <p>Students are expected to be active participants in the course, communicating via email, posting to the wiki, and completing assignments in a timely manner. The course instructors will base the participation grade on the quality and timeliness of their participation in the course.</p>
          </div>
-         <div class="section level4" id="your-own-webserver">
-         <h4><a href="#TOC">Your own webserver</a></h4>
+         <div class="section level3" id="improvement">
+         <h3><a href="#TOC">Improvement</a></h3>
+         <p>The two coding projects will be based on mastery of the skills of web development. Because students come to the course with different skillsets, part of their final assessment will be based on their improvement. In the first week of the course, students will post a short, narrative self-assessment of their web programming skills: HTML, CSS, Javascript, (Python or other) Programming, and general understanding of how the Interent and Web work.</p>
+         <p>At the end of the semester, each student will email the instructors with an updated assessment and the grade they think they deserve for their improvement.</p>
          </div>
-         <div class="section level4" id="links-images">
-         <h4><a href="#TOC">Links &amp; Images</a></h4>
+         <div class="section level3" id="single-page-website">
+         <h3><a href="#TOC">Single Page Website</a></h3>
+         <p>Students will build a single-page, informational website on a topic of their choice. Their website will be composed of HTML, CSS, and (optionally) Javascript. It will display their fluency with the components of HTML, styling with CSS, and enhancing user experience with Javascript. The content of the website is entirely up to the student. They are encouraged to create a website on something they are already familiar with and interested in. This is an individual project.</p>
          </div>
-         <div class="section level4" id="lists-tables">
-         <h4><a href="#TOC">Lists &amp; Tables</a></h4>
-         </div>
-         </div>
-         <div class="section level3" id="more-html-css">
-         <h3><a href="#TOC">More HTMl &amp; CSS</a></h3>
-         <ol start="6" style="list-style-type: decimal">
-         <li>CSS &amp; Style Sheets</li>
-         <li>Boxes (divs &amp; spans)</li>
-         <li>Layout</li>
-         <li>Video &amp; AUdio</li>
-         </ol>
-         </div>
-         <div class="section level3" id="usability-accessiblity">
-         <h3><a href="#TOC">Usability &amp; accessiblity</a></h3>
-         <ol start="10" style="list-style-type: decimal">
-         <li>universal design</li>
-         <li>screen and media types</li>
-         <li>search &amp; metadata</li>
-         <li>usability testing</li>
-         </ol>
-         </div>
-         <div class="section level3" id="dynamic-websites">
-         <h3><a href="#TOC">Dynamic websites</a></h3>
-         <ol start="14" style="list-style-type: decimal">
-         <li>Installing Django</li>
-         <li>Views</li>
-         <li>Controllers</li>
-         <li>Templates</li>
-         </ol>
-         </div>
-         <div class="section level3" id="object-oriented-programming">
-         <h3><a href="#TOC">Object Oriented Programming</a></h3>
-         <ol start="18" style="list-style-type: decimal">
-         <li>object modeling</li>
-         <li>classes in Python</li>
-         <li>Django Models</li>
-         <li>Object-Relational Mapper</li>
-         </ol>
-         </div>
-         <div class="section level3" id="object-composition-mixins-inheritance">
-         <h3><a href="#TOC">Object composition, &quot;mixins&quot;, &amp; inheritance</a></h3>
-         <ol start="22" style="list-style-type: decimal">
-         <li>more complex objects</li>
-         <li>creating HTML forms</li>
-         <li>processing form data</li>
-         </ol>
-         </div>
-         <div class="section level3" id="users-authentication">
-         <h3><a href="#TOC">Users &amp; authentication</a></h3>
-         <ol start="25" style="list-style-type: decimal">
-         <li>Administrators, editors, users</li>
-         <li>Authentication</li>
-         <li>Authorization &amp; permissions</li>
-         </ol>
-         </div>
-         <div class="section level3" id="final-projects">
-         <h3><a href="#TOC">Final projects</a></h3>
-         <p><em>Your final project is due.</em></p>
-         </div>
-         </div>
-         <div class="section level2" id="assignments">
-         <h2><a href="#TOC">Assignments</a></h2>
-         <ol style="list-style-type: decimal">
-         <li><p><strong>Single Page Website (40%):</strong> students will build a single-page, informational website on a topic of their choice. Their website will be composed of HTML5, CSS, and Javascript. It will display their fluency with the components of HTML, styling with CSS, and enhancing user experience with Javascript. The content of the website is entirely up to the student. They are encouraged to create a website on something they are already familiar with and interested in. This is an individual project.</p></li>
-         <li><p><strong>Final project (60%):</strong> student teams will propose, design, and execute their own project. The requirements for the project are that it demonstrates effective use of the web for supporting learning, as well as the student's understanding of software analysis and design. The instructor will work with teams to develop suitable projects. In addition to submitting the working code, students will turn in a one page paper reflecting on the pedagogy informing their design.</p></li>
-         </ol>
-         </div>
-         <div class="section level2" id="resources">
-         <h2><a href="#TOC">Resources</a></h2>
-         <div class="section level3" id="required">
-         <h3><a href="#TOC">Required</a></h3>
-         <ul>
-         <li><a href="http://git-scm.com/">git version control</a></li>
-         <li>a text editor</li>
-         <li>an ssh client (Mac Users can use Terminal)</li>
-         <li><a href="http://www.mozilla.org/en-US/">Firefox web browser</a></li>
-         <li>an FTP/SCP client</li>
-         </ul>
+         <div class="section level3" id="dynamic-web-application.">
+         <h3><a href="#TOC">Dynamic web application.</a></h3>
+         <p>Student teams will propose, design, and execute a project. The project can be completed individually, or in a 2-person team. The requirements for the project are that it demonstrates the students understanding of server-side and client-side web development. The instructor will work with teams to develop suitable projects.</p>
          </div>
          </div></article>
 
@@ -281,7 +219,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Wednesday, 23. January 2013 10:59AM</tt></p>
+<p><tt>Last modified: Friday, 25. January 2013 09:55AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
