--- a/raw/research-seminar.html
+++ b/raw/research-seminar.html
@@ -28,6 +28,7 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#ways-of-knowing">Ways of knowing</a></li>
 <li><a href="#types-of-research">Types of research</a><ul>
 <li><a href="#readings-due">Readings due:</a></li>
+<li><a href="#assignments-due">Assignments Due:</a></li>
 </ul></li>
 <li><a href="#quantitative-research">Quantitative Research</a><ul>
 <li><a href="#readings-due-1">Readings due:</a></li>
@@ -44,7 +45,10 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#data-and-continuous-improvement">Data and continuous improvement</a></li>
 <li><a href="#final-presentations">Final presentations</a></li>
 </ul></li>
-<li><a href="#assignments-and-grades">Assignments and Grades</a></li>
+<li><a href="#assignments-and-grades">Assignments and Grades</a><ul>
+<li><a href="#assignment-1-review-of-literature-40">Assignment 1 — Review of literature (40%)</a></li>
+</ul></li>
+<li><a href="#assignment-2-research-design-pilot-60">Assignment 2 — Research design &amp; Pilot (60%)</a></li>
 </ul>
 </nav>
 
@@ -144,6 +148,14 @@ http://education.adelphi.edu/ed-tech
          <p>NSF. (n.d.). <a href="http://www.nsf.gov/statistics/women/">Women, Minorities, and Persons with Disabilities in S&amp;E</a>. US National Science Foundation (NSF).</p>
          <p>Haraway, D. (1988). <a href="http://www.staff.amu.edu.pl/~ewa/Haraway,%20Situated%20Knowledges.pdf">Situated Knowledges: The Science Question in Feminism and the Privilege of Partial Perspective</a>. <em>Feminist Studies</em>, <em>14</em>(3), 575–599. doi:10.2307/3178066</p>
          </div>
+         <div class="section level4" id="assignments-due">
+         <h4><a href="#TOC">Assignments Due:</a></h4>
+         <ul>
+         <li>Create an account on <a href="http://zotero.org">Zotero</a></li>
+         <li>Set up Zotero on your computer</li>
+         <li>Add 2 good and relevant scholarly sources to our group: <a href="https://www.zotero.org/groups/girls_women__computer_science">Girls, Women &amp; Comp. Sci</a></li>
+         </ul>
+         </div>
          </div>
          <div class="section level3" id="quantitative-research">
          <h3><a href="#TOC">Quantitative Research</a></h3>
@@ -189,22 +201,28 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level2" id="assignments-and-grades">
          <h2><a href="#TOC">Assignments and Grades</a></h2>
-         <p><strong>Assignment 1 — Review of literature (40%)</strong></p>
-         <p>Each semester, the seminar will collaboratively author a review of literature related to a major research area in educational technology. Examples of topics for the literature review:</p>
-         <ul>
-         <li>technology and school reform</li>
-         <li>technology and special education</li>
-         <li>technology and global development</li>
-         <li>educational equity and technology</li>
-         </ul>
+         <div class="section level3" id="assignment-1-review-of-literature-40">
+         <h3><a href="#TOC">Assignment 1 — Review of literature (40%)</a></h3>
+         <p>This semester, we will collaboratively author a &quot;review of literature&quot; related to gender studies of teaching computer science and related engineerign topics.</p>
          <p>Through this assignment, students will be evaluated on their ability to understand, analyze, and synthesize research from a range of sources using a variety of research methodologies.</p>
-         <p><strong>Assignment 2 — Research design &amp; Pilot</strong> <strong>(60%)</strong></p>
+         <p>Collaboratively we will create an outline and scope for the review. Individual studentst will be responsible for sub-topics within the report. The group will share responsibility for editing and revising the document.</p>
+         <p><strong>The final report will be completed by session 6.</strong></p>
+         </div>
+         </div>
+         <div class="section level2" id="assignment-2-research-design-pilot-60">
+         <h2><a href="#TOC">Assignment 2 — Research design &amp; Pilot (60%)</a></h2>
          <p>For the final assignment, each student will develop a novel research study to explore an area of educational technology. Students will be encouraged to develop research that they can implement in their current work positions or in their upcoming fieldwork. The research design will be evaluated on:</p>
          <ul>
          <li>the importance of the research question</li>
          <li>the clarity of the proposed study</li>
          <li>the appropriateness of the methodology chosen</li>
          <li>the feasibility of the study</li>
+         </ul>
+         <p><strong>Due dates:</strong></p>
+         <ul>
+         <li>hypothesis &amp; research question(s): session 7</li>
+         <li>research proposal/protocol: session 10</li>
+         <li>results: final session</li>
          </ul>
          </div></article>
 
@@ -232,7 +250,19 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Wednesday, 23. January 2013 12:24PM</tt></p>
+<p><tt>Last modified: Wednesday, 23. January 2013 03:17PM</tt></p>
 
+<!-- Piwik -->
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.curinga.com/" : "http://stats.curinga.com/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+    var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
+    piwikTracker.trackPageView();
+    piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://stats.curinga.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
 
 </footer>
