working on web and minor open ed changes

--- a/raw/open-ed.html
+++ b/raw/open-ed.html
@@ -81,7 +81,7 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#participation">Participation</a></li>
 <li><a href="#personal-learning-plan">Personal Learning Plan</a></li>
 <li><a href="#session-leader">Session leader</a></li>
-<li><a href="#critical-essay-choose-an-area-of-interest-that-has-arisen-out-of">Critical Essay Choose an area of interest that has arisen out of</a></li>
+<li><a href="#critical-essay">Critical Essay</a></li>
 </ul></li>
 <li><a href="#open-education-projects">Open Education Projects</a></li>
 </ul>
@@ -591,9 +591,9 @@ http://education.adelphi.edu/ed-tech
          </ol>
          <p>Your grade in this area will be a combination of self-, instructor-, and peer-evaluations.</p>
          </div>
-         <div class="section level3" id="critical-essay-choose-an-area-of-interest-that-has-arisen-out-of">
-         <h3><a href="#TOC">Critical Essay Choose an area of interest that has arisen out of</a></h3>
-         <p>the course readings and discussions and write a reflective essay on this topic. Follow <a href="http://www.studyplace.org/wiki/Notes_on_the_critical-interpreti%20ve_essay">Chris Higgins' Notes on the critical-interpretive essay</a> for the structure of this essay, which should be: <em>focused</em> , <em>interesting</em>, <em>motivated</em>, and <em>controversial</em>. The chapters in <em>Cognitive Capitalism, Education, and Digital Labor</em> are typical of writing in this style. You should refer closely to the texts that we engage with during the semester in your writing. Your work must properly cite your sources. Since we will be compiling our essays together, you should use APA style. You may include endnotes in your essay as well</p>
+         <div class="section level3" id="critical-essay">
+         <h3><a href="#TOC">Critical Essay</a></h3>
+         <p>Choose an area of interest that has arisen out of the course readings and discussions and write a reflective essay on this topic. Follow <a href="http://www.studyplace.org/wiki/Notes_on_the_critical-interpreti%20ve_essay">Chris Higgins' Notes on the critical-interpretive essay</a> for the structure of this essay, which should be: <em>focused</em> , <em>interesting</em>, <em>motivated</em>, and <em>controversial</em>. The chapters in <em>Cognitive Capitalism, Education, and Digital Labor</em> are typical of writing in this style. You should refer closely to the texts that we engage with during the semester in your writing. Your work must properly cite your sources. Since we will be compiling our essays together, you should use APA style. You may include endnotes in your essay as well</p>
          <p>Essays must be approximately 5,000 words long (about 10 pages). They will be posted online for discussion in our last week of the semester. This is strictly an individual assignment (one essay per person). You should work with your study group to draft and improve your essay. I strongly suggest that everyone schedule an appointment with the <a href="http://students.adelphi.edu/writingcenter/">Writing Center</a> before you turn in your draft, and then again before you turn in your final essay.</p>
          <p>You must bring a <strong>draft of your essay</strong> on 12/5. You will be assigned another classmate as the editor for your work. This person will be outside of your study group, to give you a different perspective. You are encouraged to also solicit comments from your study group. <strong>Comments from your peer editor are due on 12/12.</strong></p>
          <p><strong>Your final essay is due on 12/19.</strong> Late work will not be accepted for this assignment and there will not be an opportunity to re-write your final draft. Avail yourself to the resources in your personal learning network to ensure that you turn in high quality work.</p>
@@ -608,7 +608,6 @@ http://education.adelphi.edu/ed-tech
          <li>Are there portions of the article that you recommend be shortened, excised or expanded?</li>
          </ol>
          <p>From <a href="http://peerproduction.net/peer-review/process/">Process: Appendix A</a>. <em>modifications appear in italics</em></p>
-         <p>Three people will read your essay and offer a grade and comments: the instructor, an outside reviewer, and a fellow student from the class. Your grade for the essay will be the average of these three grades.</p>
          </div>
          </div>
          <div class="section level2" id="open-education-projects">
@@ -691,7 +690,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Wednesday, 05. December 2012 03:45PM</tt></p>
+<p><tt>Last modified: Saturday, 02. February 2013 01:18AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
