--- a/raw/web-programming.html
+++ b/raw/web-programming.html
@@ -28,10 +28,10 @@ http://education.adelphi.edu/ed-tech
 <li><a href="#schedule">Schedule</a></li>
 <li><a href="#class-sessions">Class Sessions</a></li>
 <li><a href="#assignments-grading">Assignments &amp; Grading</a><ul>
-<li><a href="#participation">Participation</a></li>
-<li><a href="#improvement">Improvement</a></li>
-<li><a href="#single-page-website">Single Page Website</a></li>
-<li><a href="#dynamic-web-application.">Dynamic web application.</a></li>
+<li><a href="#participation-15">Participation (15%)</a></li>
+<li><a href="#improvement-15">Improvement (15%)</a></li>
+<li><a href="#single-page-website-30">Single Page Website (30%)</a></li>
+<li><a href="#dynamic-web-application-40">Dynamic web application (40%)</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -46,7 +46,8 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level2" id="course-format">
          <h2><a href="#TOC">Course Format</a></h2>
-         <p>This course is fully online. Each week there will be a series of topics, for students to pursue at their own pace.</p>
+         <p>This course is fully online. Each week there will be a series of topics, for students to pursue at their own pace. Weeks will run on a Monday-to-Monday schedule. Assignments for the week are due on the following Monday.</p>
+         <p>This course runs on the Cycle 3 schedule. It begins on Monday January 27 and ends on Monday March 18.</p>
          <p>Instruction will come from several sources:</p>
          <ul>
          <li>the course text book (Duckett)</li>
@@ -106,7 +107,6 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level2" id="schedule">
          <h2><a href="#TOC">Schedule</a></h2>
-         <p><em>This online course runs according to Adelphi's Cycle 3.</em> <em>Classes will be on a Sunday-to-Sunday schedule. Students work at their own pace through the course materials, but must attend at least 4 synchronous labs (either online or in person) during the class.</em></p>
          <table>
          <thead>
          <tr class="header">
@@ -174,22 +174,22 @@ http://education.adelphi.edu/ed-tech
          </div>
          <div class="section level2" id="assignments-grading">
          <h2><a href="#TOC">Assignments &amp; Grading</a></h2>
-         <p>There are two major projects in this course, the <em>single page website</em> and the <em>dynamic web application</em>.</p>
-         <div class="section level3" id="participation">
-         <h3><a href="#TOC">Participation</a></h3>
+         <p>There are two major projects in this course, the <em>single page website</em> and the <em>dynamic web application</em>. Other grades come from particiaption and improvement.</p>
+         <div class="section level3" id="participation-15">
+         <h3><a href="#TOC">Participation (15%)</a></h3>
          <p>Students are expected to be active participants in the course, communicating via email, posting to the wiki, and completing assignments in a timely manner. The course instructors will base the participation grade on the quality and timeliness of their participation in the course.</p>
          </div>
-         <div class="section level3" id="improvement">
-         <h3><a href="#TOC">Improvement</a></h3>
-         <p>The two coding projects will be based on mastery of the skills of web development. Because students come to the course with different skillsets, part of their final assessment will be based on their improvement. In the first week of the course, students will post a short, narrative self-assessment of their web programming skills: HTML, CSS, Javascript, (Python or other) Programming, and general understanding of how the Interent and Web work.</p>
+         <div class="section level3" id="improvement-15">
+         <h3><a href="#TOC">Improvement (15%)</a></h3>
+         <p>The two coding projects will be based on mastery of the skills of web development. Because students come to the course with different skill sets, part of their final assessment will be based on their improvement. In the first week of the course, students will post a short, narrative self-assessment of their web programming skills: HTML, CSS, Javascript, (Python or other) Programming, and general understanding of how the Interent and Web work.</p>
          <p>At the end of the semester, each student will email the instructors with an updated assessment and the grade they think they deserve for their improvement.</p>
          </div>
-         <div class="section level3" id="single-page-website">
-         <h3><a href="#TOC">Single Page Website</a></h3>
+         <div class="section level3" id="single-page-website-30">
+         <h3><a href="#TOC">Single Page Website (30%)</a></h3>
          <p>Students will build a single-page, informational website on a topic of their choice. Their website will be composed of HTML, CSS, and (optionally) Javascript. It will display their fluency with the components of HTML, styling with CSS, and enhancing user experience with Javascript. The content of the website is entirely up to the student. They are encouraged to create a website on something they are already familiar with and interested in. This is an individual project.</p>
          </div>
-         <div class="section level3" id="dynamic-web-application.">
-         <h3><a href="#TOC">Dynamic web application.</a></h3>
+         <div class="section level3" id="dynamic-web-application-40">
+         <h3><a href="#TOC">Dynamic web application (40%)</a></h3>
          <p>Student teams will propose, design, and execute a project. The project can be completed individually, or in a 2-person team. The requirements for the project are that it demonstrates the students understanding of server-side and client-side web development. The instructor will work with teams to develop suitable projects.</p>
          </div>
          </div></article>
@@ -219,7 +219,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Friday, 25. January 2013 09:55AM</tt></p>
+<p><tt>Last modified: Saturday, 02. February 2013 01:18AM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
