typo in dig lit

--- a/raw/digital-literacies.html
+++ b/raw/digital-literacies.html
@@ -91,7 +91,7 @@ http://education.adelphi.edu/ed-tech
          <h2><a href="#TOC">Required books</a></h2>
          <p>Lankshear, C. and Knobel, M. (2011). <em>New literacies: Everyday Practices and Social Learning.</em> Buckingham [England]; Philadelphia PA: Open University Press. ISBN 9780335242160</p>
          <p>Lessig, L. (1999). <em>Code and Other Laws of Cyberspace.</em> New York: Basic Books. <!-- Note: I know there's an updated version, but I don't think it's as readable or coherent as the original. --></p>
-         <p>Mirzoeff, N. (2009). <em>An introduction to visual culture (3nd ed.)</em>. London;New York: Routledge. ISBN 9780415327589</p>
+         <p>Mirzoeff, N. (2009). <em>An introduction to visual culture (3rd ed.)</em>. London;New York: Routledge. ISBN 9780415327589</p>
          <p>Wardrip-Fruin, N., &amp; Montfort, N. (Eds.). (2003). <em>The New Media Reader</em>. Cambridge Mass.: MIT Press. ISBN 9780262232272</p>
          </div>
          <div class="section level2" id="other-readings">
@@ -417,7 +417,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 11. March 2013 09:24AM</tt></p>
+<p><tt>Last modified: Thursday, 14. March 2013 02:02PM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
