--- a/raw/multimedia-studio.html
+++ b/raw/multimedia-studio.html
@@ -207,7 +207,7 @@ http://education.adelphi.edu/ed-tech
          <td align="left">14</td>
          <td align="right">May 2</td>
          <td align="left">GIS: Maps &amp; Location</td>
-         <td align="right">TPD</td>
+         <td align="right">TBD</td>
          </tr>
          <tr class="even">
          <td align="left">15</td>
@@ -322,7 +322,7 @@ http://education.adelphi.edu/ed-tech
     You are encouraged to modify and teach this course under the terms of the license.
     </p>
 
-<p><tt>Last modified: Monday, 11. March 2013 09:24AM</tt></p>
+<p><tt>Last modified: Monday, 11. March 2013 01:43PM</tt></p>
 
 <!-- Piwik -->
 <script type="text/javascript">
